# sitesift

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: politeness.md  roadmap.md  site_types.md
eval/: golden.jsonl  run_eval.py
eval/fixtures/: academic_paper.html  blog_personal.html  corporate_page.html  forum_thread.html  gov_agency.html  news_gazzetta.html  news_reuters.html  shop_shopify.html  shop_woo.html  wiki_page.html
examples/: sitesift.toml  urls.txt
src/sitesift/: __init__.py  cli.py  config.py  errors.py  evalharness.py  models.py  pipeline.py
src/sitesift/classify/: __init__.py  ladder.py  prompt.py  rules.py  validate.py
src/sitesift/classify/llm/: __init__.py  anthropic.py  base.py  engine.py  ollama.py
src/sitesift/data/: rules.yaml
src/sitesift/extract/: __init__.py  bundle.py  fingerprint.py  html.py  language.py  sanitize.py  structured.py  text.py
src/sitesift/frontier/: __init__.py  filters.py  normalize.py  store.py
src/sitesift/net/: __init__.py  cache.py  fetcher.py  guard.py  limiter.py  robots.py
src/sitesift/observability/: __init__.py
src/sitesift/output/: __init__.py  jsonl.py
src/sitesift/taxonomy/: __init__.py  loader.py
src/sitesift/taxonomy/data/: taxonomy_custom.yaml
tests/: conftest.py
tests/integration/: test_eval.py  test_fetcher.py  test_fetcher_errors.py  test_llm_ollama.py  test_pipeline.py  test_pipeline_llm.py
tests/security/: test_ssrf.py
tests/unit/: test_anthropic.py  test_extract.py  test_ladder.py  test_normalize.py  test_robots.py  test_rules.py  test_store.py  test_taxonomy.py
